# moderncpp

./: .gitignore  CMakeLists.txt
cpp17/: CMakeLists.txt  test_variant.cpp
